---------------------------------------------------------------------------------------------------
Version: 0.11.6
Date: 2022-12-31
  Localization:
    - K2: Better string for silica processing, for en
---------------------------------------------------------------------------------------------------
Version: 0.11.5
Date: 2022-12-24
  Localization:
    - ja locale updates from Sakuro
    - de locale updates from NathanU
    - zh-CN updates from sunnytan53
---------------------------------------------------------------------------------------------------
Version: 0.11.4
Date: 2022-08-23
  Changes:
    - deep core mining balance for stone needs
    - Minor compatibility updates
---------------------------------------------------------------------------------------------------
Version: 0.11.3
Date: 2022-08-10
  Changes:
    - Cable item subgroup
---------------------------------------------------------------------------------------------------
Version: 0.11.2
Date: 2022-07-02
  Fixes:
    - SE 0.6.68 compatibility breakage fixed
---------------------------------------------------------------------------------------------------
Version: 0.11.1
Date: 2022-07-01
  Fixes:
    - SE 0.6: Use stone subgroup for raw material items
---------------------------------------------------------------------------------------------------
Version: 0.11.0
Date: 2022-07-01
  Changes:
    - Compatible with Space Exploration 0.6
---------------------------------------------------------------------------------------------------
Version: 0.10.0
Date: 2022-06-26
  Features:
    - Beta support for 248k. Silica used in glass. More changes likely to come.
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 2022-01-08
  Features:
    - Korean (ko) l10n, thanks to x2605
---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: 2022-01-08
  Features: